--- a/templates/authproxy.cfg.j2
+++ b/templates/authproxy.cfg.j2
@@ -1,10 +1,29 @@
 # {{ ansible_managed }}
+
+; Complete documentation about the Duo Auth Proxy can be found here:
+; https://duo.com/docs/authproxy_reference
+
+; NOTE: After any changes are made to this file the Duo Authentication Proxy
+; must be restarted for those changes to take effect.
+
+; MAIN: Include this section to specify global configuration options.
+; Reference: https://duo.com/docs/authproxy_reference#main-section
+;[main]
+
+; CLIENTS: Include one or more of the following configuration sections.
+; To configure more than one client configuration of the same type, append a
+; number to the section name (e.g. [ad_client2])
+
+; SERVERS: Include one or more of the following configuration sections.
+; To configure more than one server configuration of the same type, append a
+; number to the section name (e.g. radius_server_auto1, radius_server_auto2)
+
 {% for section in duo_authproxy_conf | sort %}
 [{{section}}]
 {% for key in duo_authproxy_conf[section] | sort %}
 {% set val = duo_authproxy_conf[section][key] %}
 {% if val == '' or val is undefined  %}
-# {{ key }}
+{{ key }}=
 {% else  %}
 {{ key }}={{ 'yes' if val is sameas true else ('no' if val is sameas false else val) }}
 {% endif %}
