Fix true/false values config

--- a/templates/authproxy.cfg.j2
+++ b/templates/authproxy.cfg.j2
@@ -25,7 +25,7 @@
 {% if val == '' or val is undefined  %}
 {{ key }}=
 {% else  %}
-{{ key }}={{ 'yes' if val is sameas true else ('no' if val is sameas false else val) }}
+{{ key }}={{ val }}
 {% endif %}
 {% endfor %}
 
